--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a7dea195",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6a80e19b",
    "metadata": {},
@@ -19,17 +17,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "28f1521a",
    "metadata": {},
    "source": [
-    "First, we'll need to set our API keys. If we are in DEBUG mode, we don't need to use real OpenAI or Hegel AI API keys, so for now we'll set them to empty strings."
+    "First, we'll need to set our API keys. For this demo, you'll need an OpenAI API key."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1eb85245",
    "metadata": {},
    "outputs": [],
@@ -40,7 +37,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "497ac0bb",
    "metadata": {},
@@ -50,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ad3859e7",
    "metadata": {},
    "outputs": [],
@@ -62,7 +58,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ffcfbb5b",
    "metadata": {},
@@ -71,7 +66,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f517570f",
    "metadata": {},
@@ -81,17 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "29408faa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_templates = [\"Echo the following input: {{input}}\", \"Repeat the following input: {{input}}\"]\n",
-    "user_inputs = [{\"input\": \"This is a test\"}, {\"input\": \"This is not a test\"}]"
+    "prompt_templates = [\"Answer the following question: {{input}}\", \"Respond the following query: {{input}}\"]\n",
+    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of India?\"}]"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0c9a1777",
    "metadata": {},
@@ -101,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "69159622",
    "metadata": {},
    "outputs": [],
@@ -110,7 +103,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "af04bd60",
    "metadata": {},
@@ -120,10 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "744ab156",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2023-07-05 09:24:20,882] ERROR in request_queue: Authentication error. Skipping request.\n",
+      "[2023-07-05 09:24:20,960] ERROR in request_queue: Authentication error. Skipping request.\n",
+      "[2023-07-05 09:24:21,039] ERROR in request_queue: Authentication error. Skipping request.\n",
+      "[2023-07-05 09:24:21,104] ERROR in request_queue: Authentication error. Skipping request.\n",
+      "[2023-07-05 09:24:21,106] WARNING in experiment: Please run `run` first.\n"
+     ]
+    }
+   ],
    "source": [
     "harness.prepare()\n",
     "harness.run()\n",
@@ -131,7 +135,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "637a7391",
    "metadata": {},
@@ -141,18 +144,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bb779595",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2023-07-05 09:24:21,111] WARNING in experiment: Please run `run` first.\n"
+     ]
+    }
+   ],
    "source": [
     "harness.visualize(pivot=True)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd320e",
    "metadata": {},
@@ -161,7 +171,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c36767bd",
    "metadata": {},
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8fe03c31",
    "metadata": {},
    "outputs": [],
@@ -205,7 +214,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3008b09e",
    "metadata": {},
@@ -215,12 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4633f802",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2023-07-05 09:24:21,125] WARNING in experiment: Please run `run` first.\n",
+      "[2023-07-05 09:24:21,126] WARNING in experiment: Please run `run` first.\n"
+     ]
+    }
+   ],
    "source": [
-    "harness.evaluate(\"followed_directions\", auto_eval)\n",
+    "harness.evaluate(\"followed_directions\", auto_eval, use_input_pairs=False)\n",
     "harness.visualize()"
    ]
   },
