--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "623cdd9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
+    "os.environ['DEBUG']=\"\"\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dadc080f",
    "metadata": {},
    "outputs": [],
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0d878c64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_templates = [\"Echo the following input: {{input}}\", \"Repeat the following input: {{input}}\"]\n",
-    "user_inputs = [{\"input\": \"This is a test\"}, {\"input\": \"This is not a test\"}]"
+    "prompt_templates = [\"Answer the following question: {{input}}\", \"Respond the following query: {{input}}\"]\n",
+    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of India?\"}]"
    ]
   },
   {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8f16f1e7",
    "metadata": {},
    "outputs": [],
@@ -112,83 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "866009ee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>messages</th>\n",
-       "      <th>response(s)</th>\n",
-       "      <th>latency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Echo the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000004</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Echo the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Repeat the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Repeat the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000001</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         messages   \n",
-       "0  Echo the following input: This is a test        \\\n",
-       "1  Echo the following input: This is not a test     \n",
-       "2  Repeat the following input: This is a test       \n",
-       "3  Repeat the following input: This is not a test   \n",
-       "\n",
-       "                                                  response(s)   latency  \n",
-       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000004  \n",
-       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
-       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
-       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000001  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "harness.prepare()\n",
     "harness.run()\n",
@@ -205,73 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "395c5710",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>prompt_template</th>\n",
-       "      <th>Echo the following input: {{input}}</th>\n",
-       "      <th>Repeat the following input: {{input}}</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_input</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>{'input': 'This is a test'}</th>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>{'input': 'This is not a test'}</th>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "prompt_template                                         Echo the following input: {{input}}   \n",
-       "user_input                                                                                    \n",
-       "{'input': 'This is a test'}      [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \\\n",
-       "{'input': 'This is not a test'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]   \n",
-       "\n",
-       "prompt_template                                       Repeat the following input: {{input}}  \n",
-       "user_input                                                                                   \n",
-       "{'input': 'This is a test'}      [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \n",
-       "{'input': 'This is not a test'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "harness.visualize(pivot=True)"
    ]
@@ -294,168 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c3defecd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b82706197c2c4ae9baa5bcb3a04f57ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GridBox(children=(Label(value='prompt_template'), Label(value='user_input'), Label(value='response(s)'), Label…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prompt_template</th>\n",
-       "      <th>feedback</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Repeat the following input: {{input}}</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Echo the following input: {{input}}</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         prompt_template  feedback\n",
-       "0  Repeat the following input: {{input}}  2       \n",
-       "1  Echo the following input: {{input}}    1       "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "harness.gather_feedback()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "cbc46550",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>messages</th>\n",
-       "      <th>response(s)</th>\n",
-       "      <th>latency</th>\n",
-       "      <th>feedback</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Echo the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Echo the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Repeat the following input: This is a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Repeat the following input: This is not a test</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         messages   \n",
-       "0  Echo the following input: This is a test        \\\n",
-       "1  Echo the following input: This is not a test     \n",
-       "2  Repeat the following input: This is a test       \n",
-       "3  Repeat the following input: This is not a test   \n",
-       "\n",
-       "                                                  response(s)   latency   \n",
-       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000004  \\\n",
-       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
-       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
-       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000001   \n",
-       "\n",
-       "   feedback  \n",
-       "0  1         \n",
-       "1  0         \n",
-       "2  1         \n",
-       "3  1         "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "harness.visualize()"
    ]
