Small update to notebooks

--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -32,8 +32,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"\"\n",
-    "os.environ['HEGELAI_API_KEY'] = \"\"\n",
+    "os.environ['DEBUG']=\"1\"\n",
+    "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
