--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['HEGELAI_API_KEY'] = \"\"\n",
+    "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
