Add model comparison

--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "623cdd9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"\"\n",
+    "os.environ['DEBUG']=\"1\"\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dadc080f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0d878c64",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8f16f1e7",
    "metadata": {},
    "outputs": [],
@@ -112,10 +112,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "866009ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>messages</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: Who was the first president?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Answer the following question: Who was the first president of India?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Respond the following query: Who was the first president?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Respond the following query: Who was the first president of India?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                               messages   \n",
+       "0  Answer the following question: Who was the first president?           \\\n",
+       "1  Answer the following question: Who was the first president of India?   \n",
+       "2  Respond the following query: Who was the first president?              \n",
+       "3  Respond the following query: Who was the first president of India?     \n",
+       "\n",
+       "                                                  response(s)   latency  \n",
+       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000003  \n",
+       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
+       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
+       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000001  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.prepare()\n",
     "harness.run()\n",
@@ -132,12 +205,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "395c5710",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>Answer the following question: {{input}}</th>\n",
+       "      <th>Respond the following query: {{input}}</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_input</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'Who was the first president of India?'}</th>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'Who was the first president?'}</th>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "prompt_template                                                       Answer the following question: {{input}}   \n",
+       "user_input                                                                                                       \n",
+       "{'input': 'Who was the first president of India?'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \\\n",
+       "{'input': 'Who was the first president?'}           [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]   \n",
+       "\n",
+       "prompt_template                                                         Respond the following query: {{input}}  \n",
+       "user_input                                                                                                      \n",
+       "{'input': 'Who was the first president of India?'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \n",
+       "{'input': 'Who was the first president?'}           [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.visualize(pivot=True)"
    ]
@@ -160,20 +294,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c3defecd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b3ca5657df74b9695ff12b4122610e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Label(value='prompt_template'), Label(value='user_input'), Label(value='response(s)'), Label…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.gather_feedback()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cbc46550",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>messages</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>feedback</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: Who was the first president?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Answer the following question: Who was the first president of India?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Respond the following query: Who was the first president?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Respond the following query: Who was the first president of India?</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                               messages   \n",
+       "0  Answer the following question: Who was the first president?           \\\n",
+       "1  Answer the following question: Who was the first president of India?   \n",
+       "2  Respond the following query: Who was the first president?              \n",
+       "3  Respond the following query: Who was the first president of India?     \n",
+       "\n",
+       "                                                  response(s)   latency   \n",
+       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000003  \\\n",
+       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
+       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
+       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000001   \n",
+       "\n",
+       "   feedback  \n",
+       "0  1         \n",
+       "1  1         \n",
+       "2  1         \n",
+       "3  1         "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.visualize()"
    ]
